--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,16 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "BASE_URI", '"https://www.reddit.com/"'
         buildConfigField "String", "INDIVIDUAL_POST_ITEM_KEY", '"post_item"'
+
+
+        buildConfigField "String", "SHARED_PREFS_NAME", '"post_lists"'
+        buildConfigField "String", "SIZE_OF_POST_LIST", '"list_size"'
+        buildConfigField "String", "LAST_DOWNLOAD_FILE_NAME", '"last_download_file"'
+        buildConfigField "String", "LAST_DOWNLOAD_TIME_KEY", '"last_download"'
+        buildConfigField "String", "KEY_URL_STRING", '"URL_STRING"'
+        buildConfigField "String", "POST_LOADING_STATUS", '"post_loading"'
+        buildConfigField "String", "POST_TAB_KEY", '"key"'
+        buildConfigField "Integer", "ERROR_RESPONSE_CODE", '404'
     }
     buildTypes {
         release {
