--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,10 @@ android {
         buildConfigField "String", "POST_TAB_KEY", '"key"'
         buildConfigField "Integer", "ERROR_RESPONSE_CODE", '404'
     }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -54,4 +55,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'design'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
+    compile 'junit:junit:4.12'
 }
