--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view_recycler.MainActivity"
+            android:name=".view_recycler.ViewActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +38,7 @@
         </activity>
         <activity
             android:name=".detail_post.DetailActivity"
-            android:parentActivityName=".view_recycler.MainActivity">
+            android:parentActivityName=".view_recycler.ViewActivity">
 
         </activity>
     </application>
