--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
     compile 'junit:junit:4.12'
+    compile 'com.squareup:otto:1.3.8'
 
 
 }
